environments/prod/shelfmark/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shelfmark
  namespace: shelfmark
  labels:
    app.kubernetes.io/name: shelfmark
    app.kubernetes.io/instance: shelfmark
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8084
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: shelfmark
    app.kubernetes.io/instance: shelfmark
