environments/prod/shelfmark/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shelfmark-route
  namespace: shelfmark
  labels:
    app.kubernetes.io/name: shelfmark
spec:
  parentRefs:
    - name: simons-gateway
      namespace: envoy
  hostnames:
    - "booksearch.simonbrundin.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: shelfmark
          port: 8084
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
